<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_content_tip"
        android:textColor="@color/text_black"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_normal"/>

    <EditText
        android:id="@+id/dialog_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="3dp"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/dialog_notify_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_gravity="right" />

    <LinearLayout
        android:id="@+id/dialog_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/dialog_input_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:background="@drawable/dialog_bt_bg"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_input_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm"
            android:background="@drawable/dialog_bt_bg"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>