<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/modify_wifi_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:id="@+id/prefix_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="right|center"
            android:singleLine="true"
            android:text="wifi_camera_"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/prefix_name"
            android:background="@android:color/white"
            android:gravity="left|bottom"
            android:hint="@string/input_new_wifi_name"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/et_input_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_content"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_smaller" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_weight="1"
            android:background="@drawable/button_left_bg_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/height_button"
            android:background="@color/divider_bg" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button"
            android:layout_weight="1"
            android:background="@drawable/button_right_bg_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

</LinearLayout>
