<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.jieli.stream.player.ui.dialog.NotifyDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title"
            android:gravity="center"
            android:text="title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_small"
        android:scrollbars="vertical"
        android:singleLine="false"/>

    <View
        android:id="@+id/line_id"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:background="@drawable/button_left_bg_selector"
            android:textSize="@dimen/text_normal"
            android:visibility="visible"/>

        <View
            android:id="@+id/divider_id"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_bg" />

        <TextView
            android:id="@+id/tv_middle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/return_back"
            android:textColor="@android:color/black"
            android:background="@drawable/button_bg_selector"
            android:textSize="@dimen/text_normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:background="@drawable/button_right_bg_selector"
            android:visibility="visible"/>
    </LinearLayout>

</LinearLayout>
