<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <RelativeLayout
        android:id="@+id/dialog_file_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_choose_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_dir_tip"
            android:textSize="@dimen/text_normal"
            android:textColor="@color/text_black"
            android:padding="5dp"/>
        <ImageView
            android:id="@+id/create_dir_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@mipmap/ic_create_dir"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:contentDescription="@null"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_file_operation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_file_top_layout">
        <TextView
            android:id="@+id/dialog_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_marginTop="3dp"
            android:text="/sdcard0/DVRunning"/>
        <ImageView
            android:id="@+id/dialog_return_path"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_return"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@+id/dialog_file_path"
            android:padding="5dp"
            android:contentDescription="@null"/>
    </RelativeLayout>

    <View
        android:id="@+id/dialog_file_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"
        android:layout_below="@+id/dialog_file_operation_layout"/>

    <ListView
        android:id="@+id/dialog_file_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dialog_file_line"
        android:layout_above="@+id/dialog_btn_layout" />

    <View
        android:id="@+id/dialog_file_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"
        android:layout_below="@+id/dialog_file_list"/>

    <LinearLayout
        android:id="@+id/dialog_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/dialog_file_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:background="@drawable/dialog_bt_bg"/>

        <Button
            android:id="@+id/dialog_file_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/confirm"
            android:background="@drawable/dialog_bt_bg"/>

    </LinearLayout>

</RelativeLayout>